--- a/src/main/resources/sio/velikojava/hello-view.fxml
+++ b/src/main/resources/sio/velikojava/hello-view.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="sio.velikojava.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.HelloController">
+  <children>
+    <Label layoutX="14.0" layoutY="23.0" text="Login" />
+    <Label layoutX="14.0" layoutY="72.0" text="Mot de passe" />
+    <TextField fx:id="txtLogin" layoutX="110.0" layoutY="19.0" prefHeight="26.0" prefWidth="189.0" />
+    <Button fx:id="btnConnexion" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#btnConnexionClicked" prefHeight="26.0" prefWidth="283.0" text="Se connecter" />
+    <Label fx:id="txtErreur" alignment="CENTER" layoutX="15.0" layoutY="108.0" prefHeight="25.0" prefWidth="283.0" style="-fx-border-color: blue;" />
+    <PasswordField fx:id="txtMotDePasse" layoutX="110.0" layoutY="68.0" prefHeight="26.0" prefWidth="189.0" />
+  </children>
+</AnchorPane>
