--- a/src/main/resources/sio/velikojava/hello-view.fxml
+++ b/src/main/resources/sio/velikojava/hello-view.fxml
@@ -5,14 +5,20 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="257.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.HelloController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" style="-fx-background-color: #f5f5f5;" stylesheets="@../../CSS/loginForm.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.HelloController">
   <children>
-    <Label layoutX="14.0" layoutY="23.0" text="Login" />
-    <Label layoutX="14.0" layoutY="72.0" text="Mot de passe" />
-    <TextField fx:id="txtLogin" layoutX="110.0" layoutY="19.0" prefHeight="26.0" prefWidth="189.0" />
-    <Button fx:id="btnConnexion" layoutX="14.0" layoutY="142.0" mnemonicParsing="false" onMouseClicked="#btnConnexionClicked" prefHeight="26.0" prefWidth="283.0" text="Se connecter" />
-    <Label fx:id="txtErreur" alignment="CENTER" layoutX="15.0" layoutY="108.0" prefHeight="25.0" prefWidth="283.0" style="-fx-border-color: blue;" />
-    <PasswordField fx:id="txtMotDePasse" layoutX="110.0" layoutY="68.0" prefHeight="26.0" prefWidth="189.0" />
+    <Pane layoutX="20.0" layoutY="20.0" prefHeight="260.0" prefWidth="360.0" style="-fx-background-color: #ffffff; -fx-border-color: #dcdcdc; -fx-border-radius: 10; -fx-background-radius: 10;">
+      <children>
+        <Label layoutX="130.0" layoutY="20.0" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #333333;" text="Connexion" />
+        <Label layoutX="30.0" layoutY="70.0" style="-fx-font-size: 14px; -fx-text-fill: #555555;" text="Login :" />
+        <TextField fx:id="txtLogin" layoutX="100.0" layoutY="65.0" prefHeight="30.0" prefWidth="220.0" style="-fx-border-color: white; -fx-background-radius: 60; -fx-padding: 5;" />
+        <Label layoutX="30.0" layoutY="120.0" style="-fx-font-size: 14px; -fx-text-fill: #555555;" text="Mot de passe :" />
+        <PasswordField fx:id="txtMotDePasse" layoutX="130.0" layoutY="115.0" prefHeight="30.0" prefWidth="190.0" style="-fx-border-color: white; -fx-background-radius: 60; -fx-padding: 5;" styleClass="password-field" />
+        <Button fx:id="btnConnexion" layoutX="30.0" layoutY="180.0" mnemonicParsing="false" onMouseClicked="#btnConnexionClicked" prefHeight="40.0" prefWidth="290.0" style="-fx-background-color: #113f67; -fx-text-fill: #ffffff; -fx-font-weight: bold; -fx-background-radius: 20;" text="Se connecter" />
+        <Label fx:id="txtErreur" alignment="CENTER" layoutX="30.0" layoutY="230.0" prefHeight="25.0" prefWidth="300.0" style="-fx-text-fill: red; -fx-font-size: 12px;" />
+      </children>
+    </Pane>
   </children>
 </AnchorPane>
