--- a/src/main/resources/sio/velikojava/hello-view.fxml
+++ b/src/main/resources/sio/velikojava/hello-view.fxml
@@ -12,8 +12,8 @@
     <Pane layoutX="20.0" layoutY="20.0" prefHeight="260.0" prefWidth="360.0" style="-fx-background-color: #ffffff; -fx-border-color: #dcdcdc; -fx-border-radius: 10; -fx-background-radius: 10;">
       <children>
         <Label layoutX="130.0" layoutY="20.0" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: #333333;" text="Connexion" />
-        <Label layoutX="30.0" layoutY="70.0" style="-fx-font-size: 14px; -fx-text-fill: #555555;" text="Login :" />
-        <TextField fx:id="txtLogin" layoutX="100.0" layoutY="65.0" prefHeight="30.0" prefWidth="220.0" style="-fx-border-color: white; -fx-background-radius: 60; -fx-padding: 5;" />
+        <Label layoutX="30.0" layoutY="70.0" style="-fx-font-size: 14px; -fx-text-fill: #555555;" text="Email :" />
+        <TextField fx:id="txtLogin" layoutX="90.0" layoutY="65.0" prefHeight="30.0" prefWidth="230.0" style="-fx-border-color: white; -fx-background-radius: 60; -fx-padding: 5;" />
         <Label layoutX="30.0" layoutY="120.0" style="-fx-font-size: 14px; -fx-text-fill: #555555;" text="Mot de passe :" />
         <PasswordField fx:id="txtMotDePasse" layoutX="130.0" layoutY="115.0" prefHeight="30.0" prefWidth="190.0" style="-fx-border-color: white; -fx-background-radius: 60; -fx-padding: 5;" styleClass="password-field" />
         <Button fx:id="btnConnexion" layoutX="30.0" layoutY="180.0" mnemonicParsing="false" onMouseClicked="#btnConnexionClicked" prefHeight="40.0" prefWidth="290.0" style="-fx-background-color: #113f67; -fx-text-fill: #ffffff; -fx-font-weight: bold; -fx-background-radius: 20;" text="Se connecter" />
