gestionUsers-view.fxml CSS

--- a/src/main/resources/sio/velikojava/gestionUsers-view.fxml
+++ b/src/main/resources/sio/velikojava/gestionUsers-view.fxml
@@ -4,23 +4,38 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.GestionUsersController">
+    <children>
+        <Pane layoutX="10.0" layoutY="10.0" prefHeight="380.0" prefWidth="580.0" style="-fx-background-color: #ffffff; -fx-border-color: #dcdcdc; -fx-border-radius: 10; -fx-background-radius: 10;">
+            <children>
+                <!-- TableView des utilisateurs -->
+                <TableView fx:id="tvUsers" layoutX="10.0" layoutY="20.0" prefHeight="260.0" prefWidth="560.0" style="-fx-border-color: #dcdcdc; -fx-background-radius: 5;" onMouseClicked="#tvUsersClicked">
+                    <columns>
+                        <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" />
+                        <TableColumn fx:id="tcEmail" prefWidth="136.0" text="Email" />
+                        <TableColumn fx:id="tcNom" prefWidth="76.0" text="Nom" />
+                        <TableColumn fx:id="tcPrenom" prefWidth="61.5" text="Prenom" />
+                        <TableColumn fx:id="tcVille" prefWidth="73.5" text="Ville" />
+                        <TableColumn fx:id="tcStatut" prefWidth="67.5" text="Statut" />
+                        <TableColumn fx:id="tcMdp" prefWidth="87.5" text="Mot de passe" />
+                    </columns>
+                </TableView>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.GestionUsersController">
-   <children>
-      <TableView fx:id="tvUsers" layoutX="6.0" layoutY="39.0" onMouseClicked="#tvUsersClicked" prefHeight="200.0" prefWidth="578.0">
-        <columns>
-          <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tcEmail" prefWidth="136.0" text="Email" />
-            <TableColumn fx:id="tcNom" prefWidth="76.0" text="Nom" />
-            <TableColumn fx:id="tcPrenom" prefWidth="61.5" text="Prenom" />
-            <TableColumn fx:id="tcVille" prefWidth="73.5" text="Ville" />
-            <TableColumn fx:id="tcStatut" prefWidth="67.5" text="Statut" />
-            <TableColumn fx:id="tcMdp" prefWidth="87.5" text="Mot de passe" />
-        </columns>
-      </TableView>
-      <Button fx:id="btnModifierMdp" layoutX="48.0" layoutY="301.0" mnemonicParsing="false" onMouseClicked="#btnModifierMdpClicked" text="Forcer le changement de mot de passe" />
-      <Button fx:id="btnSupprimer" layoutX="354.0" layoutY="301.0" mnemonicParsing="false" onMouseClicked="#btnSupprimerClicked" text="Supprimer" />
-      <Button fx:id="btnBloquer" layoutX="516.0" layoutY="301.0" mnemonicParsing="false" onMouseClicked="#btnBloquerClicked" text="Bloquer" />
-   </children>
+                <!-- Barre de boutons -->
+                <HBox layoutX="10.0" layoutY="300.0" prefHeight="40.0" prefWidth="560.0" spacing="15.0" alignment="CENTER">
+                    <children>
+                        <Button fx:id="btnModifierMdp" mnemonicParsing="false" onMouseClicked="#btnModifierMdpClicked" text="Changer mot de passe"
+                                style="-fx-background-color: #007bff; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="170.0" />
+                        <Button fx:id="btnSupprimer" mnemonicParsing="false" onMouseClicked="#btnSupprimerClicked" text="Supprimer"
+                                style="-fx-background-color: #ff4d4d; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="120.0" />
+                        <Button fx:id="btnBloquer" mnemonicParsing="false" onMouseClicked="#btnBloquerClicked" text="Bloquer"
+                                style="-fx-background-color: #ffc107; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="120.0" />
+                    </children>
+                </HBox>
+            </children>
+        </Pane>
+    </children>
 </AnchorPane>
