--- a/src/main/resources/sio/velikojava/gestionUsers-view.fxml
+++ b/src/main/resources/sio/velikojava/gestionUsers-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -12,7 +13,7 @@
         <Pane layoutX="10.0" layoutY="10.0" prefHeight="380.0" prefWidth="580.0" style="-fx-background-color: #ffffff; -fx-border-color: #dcdcdc; -fx-border-radius: 10; -fx-background-radius: 10;">
             <children>
                 <!-- TableView des utilisateurs -->
-                <TableView fx:id="tvUsers" layoutX="10.0" layoutY="20.0" prefHeight="260.0" prefWidth="560.0" style="-fx-border-color: #dcdcdc; -fx-background-radius: 5;" onMouseClicked="#tvUsersClicked">
+                <TableView fx:id="tvUsers" layoutX="10.0" layoutY="47.0" onMouseClicked="#tvUsersClicked" prefHeight="260.0" prefWidth="560.0" style="-fx-border-color: #dcdcdc; -fx-background-radius: 5;">
                     <columns>
                         <TableColumn fx:id="tcId" prefWidth="75.0" text="Id" />
                         <TableColumn fx:id="tcEmail" prefWidth="136.0" text="Email" />
@@ -25,16 +26,14 @@
                 </TableView>
 
                 <!-- Barre de boutons -->
-                <HBox layoutX="10.0" layoutY="300.0" prefHeight="40.0" prefWidth="560.0" spacing="15.0" alignment="CENTER">
+                <HBox alignment="CENTER" layoutX="10.0" layoutY="318.0" prefHeight="53.0" prefWidth="560.0" spacing="15.0">
                     <children>
-                        <Button fx:id="btnModifierMdp" mnemonicParsing="false" onMouseClicked="#btnModifierMdpClicked" text="Changer mot de passe"
-                                style="-fx-background-color: #007bff; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="170.0" />
-                        <Button fx:id="btnSupprimer" mnemonicParsing="false" onMouseClicked="#btnSupprimerClicked" text="Supprimer"
-                                style="-fx-background-color: #ff4d4d; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="120.0" />
-                        <Button fx:id="btnBloquer" mnemonicParsing="false" onMouseClicked="#btnBloquerClicked" text="Bloquer"
-                                style="-fx-background-color: #ffc107; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" prefHeight="35.0" prefWidth="120.0" />
+                        <Button fx:id="btnModifierMdp" mnemonicParsing="false" onMouseClicked="#btnModifierMdpClicked" prefHeight="35.0" prefWidth="170.0" style="-fx-background-color: #007bff; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" text="Changer mot de passe" />
+                        <Button fx:id="btnSupprimer" mnemonicParsing="false" onMouseClicked="#btnSupprimerClicked" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #ff4d4d; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" text="Supprimer" />
+                        <Button fx:id="btnBloquer" mnemonicParsing="false" onMouseClicked="#btnBloquerClicked" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #ffc107; -fx-text-fill: white; -fx-font-weight: bold; -fx-background-radius: 5;" text="Bloquer" />
                     </children>
                 </HBox>
+            <ImageView fx:id="imgRetour" fitHeight="35.0" fitWidth="58.0" layoutX="10.0" onMouseClicked="#imgRetourClicked" pickOnBounds="true" preserveRatio="true" />
             </children>
         </Pane>
     </children>
