--- a/src/main/resources/sio/velikojava/map-view.fxml
+++ b/src/main/resources/sio/velikojava/map-view.fxml
@@ -1,17 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/20.0.1" fx:controller="sio.velikojava.MapController">
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.MapController">
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
 
    <Label fx:id="welcomeText" />
+   <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #113f67;">
+      <children>
+         <ImageView fx:id="imgLogo" fitHeight="104.0" fitWidth="129.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@../../../../../../../veliko/BTS-SIO-G6-2025-VELIKO-Web/public/images/logo1.png" />
+            </image>
+         </ImageView>
+         <Button fx:id="btnCarte" mnemonicParsing="false" onAction="#menuClicked" prefHeight="105.0" prefWidth="90.0" style="-fx-background-color: #113f67;" text="Carte" textFill="WHITE">
+            <font>
+               <Font name="System Italic" size="23.0" />
+            </font>
+         </Button>
+         <Button fx:id="btnGestionUser" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="229.0" style="-fx-background-color: #113f67;" text="Gestion utilisateurs" textFill="WHITE">
+            <font>
+               <Font name="System Italic" size="23.0" />
+            </font>
+         </Button>
+         <Button fx:id="btnAPropos" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="133.0" style="-fx-background-color: #113f67;" text="A propos" textFill="WHITE">
+            <font>
+               <Font name="System Italic" size="23.0" />
+            </font>
+         </Button>
+      </children>
+   </HBox>
 
    <!-- Map container -->
-   <Pane fx:id="mapContainer" prefHeight="500.0" prefWidth="700.0" />
+   <Pane fx:id="mapContainer" prefHeight="450.0" prefWidth="569.0" />
 </VBox>
