--- a/src/main/resources/sio/velikojava/reservationStats-view.fxml
+++ b/src/main/resources/sio/velikojava/reservationStats-view.fxml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sio.velikojava.ReservationStats"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.ReservationStats">
+   <children>
+      <HBox prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: darkblue;">
+         <children>
+            <Label prefHeight="98.0" prefWidth="605.0" text="Statistique Reservations" textFill="WHITE">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <Label layoutX="14.0" layoutY="115.0" text="Nombre total de reservations :" />
+      <Label fx:id="lblNbrTotResa" layoutX="43.0" layoutY="142.0" text="NbrTotalResa" />
+   </children>
 </AnchorPane>
