--- a/src/main/resources/sio/velikojava/reservationStats-view.fxml
+++ b/src/main/resources/sio/velikojava/reservationStats-view.fxml
@@ -5,19 +5,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.ReservationStats">
    <children>
       <HBox prefHeight="100.0" prefWidth="600.0" style="-fx-background-color: darkblue;">
          <children>
-            <Label prefHeight="98.0" prefWidth="605.0" text="Statistique Reservations" textFill="WHITE">
+            <Label alignment="CENTER" prefHeight="98.0" prefWidth="605.0" text="Statistique Reservations" textFill="WHITE">
                <font>
                   <Font size="48.0" />
                </font>
             </Label>
          </children>
       </HBox>
-      <Label layoutX="14.0" layoutY="115.0" text="Nombre total de reservations :" />
-      <Label fx:id="lblNbrTotResa" layoutX="43.0" layoutY="142.0" text="NbrTotalResa" />
+      <Label layoutX="219.0" layoutY="134.0" text="Nombre total de reservations :" />
+      <Label fx:id="lblNbrTotResa" layoutX="263.0" layoutY="162.0" text="NbrTotalResa" />
+      <Label fx:id="lblTempsMoyen" layoutX="236.0" layoutY="200.0" text="Temps moyen par trajet" />
+      <Label fx:id="lblNbrTotResa1" alignment="CENTER" layoutX="244.0" layoutY="223.0" prefHeight="17.0" prefWidth="113.0" text="temps moyen" />
    </children>
 </AnchorPane>
