--- a/src/main/resources/sio/velikojava/userStats-view.fxml
+++ b/src/main/resources/sio/velikojava/userStats-view.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sio.velikojava.UserStats"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.UserStats">
+   <children>
+      <PieChart fx:id="piechartAge" layoutX="14.0" layoutY="166.0" prefHeight="220.0" prefWidth="269.0" />
+      <Label layoutX="14.0" layoutY="135.0" text="Tranche d'age des utilisateurs :" />
+      <BarChart fx:id="barChartTopUser" layoutX="283.0" layoutY="166.0" prefHeight="220.0" prefWidth="326.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis prefHeight="162.0" prefWidth="27.0" side="LEFT" />
+        </yAxis>
+      </BarChart>
+      <Label layoutX="305.0" layoutY="135.0" prefHeight="17.0" prefWidth="169.0" text="Top 10 utilisateurs :" />
+      <Label layoutX="246.0" layoutY="14.0" text="Nombre total d'utilisateur" />
+      <Label fx:id="lblNbrUserTot" layoutX="300.0" layoutY="62.0" text="Nbr User" />
+   </children>
 </AnchorPane>
