--- a/src/main/resources/sio/velikojava/reservationStats-view.fxml
+++ b/src/main/resources/sio/velikojava/reservationStats-view.fxml
@@ -18,7 +18,7 @@
       </HBox>
       <Label layoutX="219.0" layoutY="134.0" text="Nombre total de reservations :" />
       <Label fx:id="lblNbrTotResa" layoutX="263.0" layoutY="162.0" text="NbrTotalResa" />
-      <Label fx:id="lblTempsMoyen" layoutX="236.0" layoutY="200.0" text="Temps moyen par trajet" />
-      <Label fx:id="lblNbrTotResa1" alignment="CENTER" layoutX="244.0" layoutY="223.0" prefHeight="17.0" prefWidth="113.0" text="temps moyen" />
+      <Label layoutX="236.0" layoutY="200.0" text="Temps moyen par trajet" />
+      <Label fx:id="lblTempsMoyen" alignment="CENTER" layoutX="244.0" layoutY="223.0" prefHeight="17.0" prefWidth="113.0" text="temps moyen" />
    </children>
 </AnchorPane>
