--- a/src/main/resources/sio/velikojava/reservationStats-view.fxml
+++ b/src/main/resources/sio/velikojava/reservationStats-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -20,5 +21,6 @@
       <Label fx:id="lblNbrTotResa" layoutX="263.0" layoutY="162.0" text="NbrTotalResa" />
       <Label layoutX="236.0" layoutY="200.0" text="Temps moyen par trajet" />
       <Label fx:id="lblTempsMoyen" alignment="CENTER" layoutX="244.0" layoutY="223.0" prefHeight="17.0" prefWidth="113.0" text="temps moyen" />
+      <PieChart fx:id="pieChartTypeVelo" layoutX="14.0" layoutY="223.0" prefHeight="168.0" prefWidth="210.0" />
    </children>
 </AnchorPane>
