--- a/src/main/resources/sio/velikojava/userStats-view.fxml
+++ b/src/main/resources/sio/velikojava/userStats-view.fxml
@@ -4,24 +4,45 @@
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.shape.Rectangle?>
 
+<AnchorPane prefHeight="450.0" prefWidth="650.0" style="-fx-background-color: linear-gradient(to bottom, #2A2A72, #009FFD);" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.UserStats">
+    <children>
+        <!-- En-tête -->
+        <HBox prefHeight="60.0" prefWidth="650.0" style="-fx-background-color: rgba(0,0,0,0.7); -fx-border-radius: 10; -fx-background-radius: 10;">
+            <children>
+                <Label alignment="CENTER" prefHeight="60.0" prefWidth="650.0" text="Statistiques des Utilisateurs" textFill="WHITE">
+                </Label>
+            </children>
+        </HBox>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.UserStats">
-   <children>
-      <PieChart fx:id="piechartAge" layoutX="14.0" layoutY="166.0" prefHeight="220.0" prefWidth="269.0" />
-      <Label layoutX="14.0" layoutY="135.0" text="Tranche d'age des utilisateurs :" />
-      <BarChart fx:id="barChartTopUser" layoutX="283.0" layoutY="166.0" prefHeight="220.0" prefWidth="326.0">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis prefHeight="162.0" prefWidth="27.0" side="LEFT" />
-        </yAxis>
-      </BarChart>
-      <Label layoutX="305.0" layoutY="135.0" prefHeight="17.0" prefWidth="169.0" text="Top 10 utilisateurs :" />
-      <Label layoutX="246.0" layoutY="14.0" text="Nombre total d'utilisateur" />
-      <Label fx:id="lblNbrUserTot" layoutX="300.0" layoutY="62.0" text="Nbr User" />
-   </children>
+        <!-- Retour -->
+        <Button fx:id="btnRetour" layoutX="20.0" layoutY="70.0" onMouseClicked="#btnRetourClicked" prefWidth="100.0" style="-fx-background-color: #FFD700; -fx-text-fill: black; -fx-font-size: 14px; -fx-font-weight: bold; -fx-border-radius: 8; -fx-background-radius: 8;" text="Retour" />
+
+        <!-- Nombre total d'utilisateurs -->
+        <Label layoutX="230.0" layoutY="80.0" style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-text-fill: white;" text="Nombre total d'utilisateurs :" />
+        <Label fx:id="lblNbrUserTot" layoutX="320.0" layoutY="110.0" style="-fx-font-size: 22px; -fx-font-weight: bold; -fx-text-fill: #FFD700;" text="0" />
+
+        <!-- Graphique en camembert -->
+        <Label layoutX="40.0" layoutY="140.0" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: white;" text="Répartition par âge :" />
+        <PieChart fx:id="piechartAge" layoutX="30.0" layoutY="170.0" prefHeight="230.0" prefWidth="280.0" />
+
+        <!-- Graphique en barres -->
+        <Label layoutX="360.0" layoutY="140.0" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-text-fill: white;" text="Top 10 utilisateurs :" />
+        <BarChart fx:id="barChartTopUser" layoutX="330.0" layoutY="170.0" prefHeight="230.0" prefWidth="280.0">
+            <xAxis>
+                <CategoryAxis side="BOTTOM" />
+            </xAxis>
+            <yAxis>
+                <NumberAxis side="LEFT" />
+            </yAxis>
+        </BarChart>
+
+        <!-- Effet de profondeur -->
+        <Rectangle layoutX="20.0" layoutY="130.0" width="610.0" height="280.0" arcWidth="30.0" arcHeight="30.0" style="-fx-fill: rgba(255, 255, 255, 0.15);" />
+    </children>
 </AnchorPane>
