--- a/src/main/resources/sio/velikojava/gestionStats-view.fxml
+++ b/src/main/resources/sio/velikojava/gestionStats-view.fxml
@@ -1,25 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sio.velikojava.GestionStatsController">
    <children>
-      <HBox prefHeight="100.0" prefWidth="603.0" style="-fx-background-color: darkblue;">
+      <!-- En-tête -->
+      <VBox prefWidth="600.0" alignment="CENTER" style="-fx-background-color: darkblue;">
          <children>
-            <Label prefHeight="100.0" prefWidth="618.0" text="Gestion Statistiques" textFill="WHITE">
+            <Label text="Gestion Statistiques" textFill="WHITE">
                <font>
-                  <Font size="47.0" />
+                  <Font size="40.0" />
                </font>
             </Label>
          </children>
-      </HBox>
-      <Button fx:id="btnStatReservation" layoutX="53.0" layoutY="166.0" mnemonicParsing="false" onAction="#menuStatClicked" prefHeight="78.0" prefWidth="143.0" text="Statistique reservations" />
-      <Button fx:id="btnStatStation" layoutX="368.0" layoutY="166.0" mnemonicParsing="false" onAction="#menuStatClicked" prefHeight="78.0" prefWidth="143.0" text="Statistique stations" />
-      <Button fx:id="btnStatUser" layoutX="211.0" layoutY="275.0" mnemonicParsing="false" onAction="#menuStatClicked" prefHeight="78.0" prefWidth="143.0" text="Statistique utilisateurs" />
-      <Button fx:id="btnRetour" layoutX="14.0" layoutY="361.0" mnemonicParsing="false" onAction="#menuStatClicked" text="Retour" />
+      </VBox>
+
+      <!-- Conteneur des boutons -->
+      <VBox layoutX="100.0" layoutY="120.0" spacing="20.0">
+         <children>
+            <Button fx:id="btnStatReservation" text="Statistiques Réservations" onAction="#menuStatClicked"
+                    prefHeight="60.0" prefWidth="400.0"
+                    style="-fx-background-color: #0078D7; -fx-text-fill: white; -fx-font-size: 16px; -fx-background-radius: 10;"/>
+
+            <Button fx:id="btnStatStation" text="Statistiques Stations" onAction="#menuStatClicked"
+                    prefHeight="60.0" prefWidth="400.0"
+                    style="-fx-background-color: #28A745; -fx-text-fill: white; -fx-font-size: 16px; -fx-background-radius: 10;"/>
+
+            <Button fx:id="btnStatUser" text="Statistiques Utilisateurs" onAction="#menuStatClicked"
+                    prefHeight="60.0" prefWidth="400.0"
+                    style="-fx-background-color: #DC3545; -fx-text-fill: white; -fx-font-size: 16px; -fx-background-radius: 10;"/>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
