--- a/src/main/resources/sio/velikojava/map-view.fxml
+++ b/src/main/resources/sio/velikojava/map-view.fxml
@@ -18,22 +18,22 @@
    <Label fx:id="welcomeText" />
    <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #113f67;">
       <children>
-         <ImageView fx:id="imgLogo" fitHeight="104.0" fitWidth="129.0" pickOnBounds="true" preserveRatio="true">
+         <ImageView fx:id="imgLogo" fitHeight="81.0" fitWidth="112.0" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@../../../../../../../veliko/BTS-SIO-G6-2025-VELIKO-Web/public/images/logo1.png" />
             </image>
          </ImageView>
-         <Button fx:id="btnCarte" mnemonicParsing="false" onAction="#menuClicked" prefHeight="105.0" prefWidth="90.0" style="-fx-background-color: #113f67;" text="Carte" textFill="WHITE">
+         <Button fx:id="btnCarte" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="111.0" style="-fx-background-color: #113f67;" text="Carte" textFill="WHITE">
             <font>
                <Font name="System Italic" size="23.0" />
             </font>
          </Button>
-         <Button fx:id="btnGestionUser" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="229.0" style="-fx-background-color: #113f67;" text="Gestion utilisateurs" textFill="WHITE">
+         <Button fx:id="btnGestionUser" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="243.0" style="-fx-background-color: #113f67;" text="Gestion utilisateurs" textFill="WHITE">
             <font>
                <Font name="System Italic" size="23.0" />
             </font>
          </Button>
-         <Button fx:id="btnAPropos" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="133.0" style="-fx-background-color: #113f67;" text="A propos" textFill="WHITE">
+         <Button fx:id="btnAPropos" mnemonicParsing="false" onAction="#menuClicked" prefHeight="100.0" prefWidth="169.0" style="-fx-background-color: #113f67;" text="Statistiques" textFill="WHITE">
             <font>
                <Font name="System Italic" size="23.0" />
             </font>
